--- a/primerHTML5.html
+++ b/primerHTML5.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>HTML5</title>
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
 	<body>
 		<header>
 			<h1>Titulo de la pagina</h1>
+			<img src="img/logoitc.png" alt="">
 			<nav>
 				<ul>
 					<li>Inicio</li>
@@ -16,19 +18,33 @@
 				</ul>
 			</nav>
 		</header>
-		<article>
-			Se vale
-			<section>Esto NO se vale</section>
-		</article>
 	<main>
 	<section>
 		<h2>Titulo de la Seccion</h2>
 		<article>
 			Texto, imagen, video, etc...
 		</article>
-		<article></article>
-		<article></article>
-		<article></article>
+		<article>
+			yaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</article>
+		<article>
+			niLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. 
+		</article>
+		<article>
+			raLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. 
+		</article>
 	</section>
 </main>
 <footer>
