--- a/primerHTML5.html
+++ b/primerHTML5.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8">
 		<title>HTML5</title>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-			<h1>Titulo de la pagina</h1>
+			<h1>Titulo de la página</h1>
 			<img src="img/logoitc.png" alt="">
 			<nav>
 				<ul>
@@ -20,7 +21,7 @@
 		</header>
 	<main>
 	<section>
-		<h2>Titulo de la Seccion</h2>
+		<h2>Titulo de la Sección</h2>
 		<article>
 			Texto, imagen, video, etc...
 		</article>
