--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -3,11 +3,12 @@
 	<head>
 	<meta charset="utf-8">
 		<title>Práctica 01 CSS3</title>
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
 	<body>
 		<header>
 			<img src="img/resplandor.png">
-			<img src="img/logo.png">
+			<img id="logo" src="img/logo.png">
 			<nav>
 				<ul>
 					<li>Inicio</li>
@@ -20,13 +21,59 @@
 			</nav>
 			<form action="">
 				<input type="search" placeholder="Buscar aquí..."> 
-				<input type="button" value="Buscar">
+				<input type="button" value="buscar">
 			</form>
 		</header>
+		
 		<section>
 			<article>
 				<img src="img/slide2.jpg" alt="Slide principal">
 			</article>
 		</section>
+		<section>
+			<article>
+			<img src="img/separador.jpg">
+				<br>
+				<span>Una sección</span>
+				<br>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p>
+				<input type="button" value="Ver más">
+			</article>
+			<article>
+				<img src="img/separador.jpg">
+				<br>
+				<span>Una sección</span>
+				<br>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<br>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p>
+				<input type="button" value="Ver más">
+			</article>
+			<article>
+				<img src="img/separador.jpg">
+				<br>
+				<span>Un video</span>
+				<br>
+				<img src="img/video.jpg">
+			</article>
+		</section>
+		
 	</body>
 </html>
