--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -25,16 +25,16 @@
 			</form>
 		</header>
 		
-		<section>
+		<section id="seccion01">
 			<article>
 				<img src="img/slide2.jpg" alt="Slide principal">
 			</article>
 		</section>
-		<section>
+		<section id="seccion02">
 			<article>
 			<img src="img/separador.jpg">
 				<br>
-				<span>Una sección</span>
+				<span class="unaSeccion">Una sección</span>
 				<br>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -48,7 +48,7 @@
 			<article>
 				<img src="img/separador.jpg">
 				<br>
-				<span>Una sección</span>
+				<span class="otraSeccion">Una sección</span>
 				<br>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -69,7 +69,7 @@
 			<article>
 				<img src="img/separador.jpg">
 				<br>
-				<span>Un video</span>
+				<span class="otraSeccion">Un video</span>
 				<br>
 				<img src="img/video.jpg">
 			</article>
