--- a/css02/index.html
+++ b/css02/index.html
@@ -21,6 +21,24 @@
 				</ul>
 			</nav>
 		</header>
-
+		<section id="primerseccion">
+		<article id="secc01art01">
+			<img src="img/slide.jpg">
+		</article>
+		<article id="secc01art02">
+			<span class="wecanoffer"> We can offer...</span>
+			<ul>
+				<li>Highly Competitive Prices</li>
+				<li>Variable Data</li>
+				<li>Fast Turnaround</li>
+				<li>Rapid Re-Oder Service</li>
+				<li>Wide Product Range</li>
+				<li>Low Cost Delivery</li>
+				<li>Monthly Offers</li>
+				<li>Great Customer Service</li>
+			</ul>
+		</article>
+		<img src="img/bg_offer.png" id="bgoffer">
+	</section>
 	</body>
 </html>
