--- a/css02/index.html
+++ b/css02/index.html
@@ -40,5 +40,37 @@
 		</article>
 		<img src="img/bg_offer.png" id="bgoffer">
 	</section>
+	<section id="segundaseccion">
+		<article>
+			<span class="numerotelefono">01772 250207</span>
+		</article>
+	</section>
+	<section id="terceraseccion">
+		<article>
+			<img src="img/cerdito.png" alt=""><span class="colorrosa">Save the Spring</span>		
+			<br>
+			Fabulous discounts on canva's and roll up's as well as many offers. <p>
+			Find out more...
+		</article>
+		<article>
+			<img src="img/hoja.png" alt=""><span class="colorverde">ECO Friendly</span>
+			<br>
+			ECO Friendly Materials used in our production process. Recycled papers and paper from Sustainable Forest
+			(including FSC papers) are available across our range of Printing Services. 
+		</article>
+		<article>
+			<img src="img/new.png" alt=""><span class="colorazul">Upload your file</span>
+			<br>
+			Making it easy to order your printing today. Our upload facility enables you to send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for the member of our team to contact you. <p>
+			Upload Your File Now...
+		</article>
+		<article>
+			<span class="colorrosa">Stay in touch</span>
+			<br>
+			join our mailing list today <br>
+			<input type="text" placeholder="Email goes here">
+			<input type="button" value="send">
+		</article>
+	</section>
 	</body>
 </html>
