--- a/css02/index.html
+++ b/css02/index.html
@@ -50,7 +50,7 @@
 			<img src="img/cerdito.png" alt=""><span class="colorrosa">Save the Spring</span>		
 			<br>
 			Fabulous discounts on canva's and roll up's as well as many offers. <p>
-			Find out more...
+			<span class="colorrosa">Find out more...</span>
 		</article>
 		<article>
 			<img src="img/hoja.png" alt=""><span class="colorverde">ECO Friendly</span>
@@ -62,12 +62,12 @@
 			<img src="img/new.png" alt=""><span class="colorazul">Upload your file</span>
 			<br>
 			Making it easy to order your printing today. Our upload facility enables you to send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for the member of our team to contact you. <p>
-			Upload Your File Now...
+			<span class="colorazul">Upload Your File Now...</span>
 		</article>
-		<article>
+		<article id="mailinglist">
 			<span class="colorrosa">Stay in touch</span>
 			<br>
-			join our mailing list today <br>
+			Join our mailing list today <br>
 			<input type="text" placeholder="Email goes here">
 			<input type="button" value="send">
 		</article>
