--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Calculadora Básica</title>
-	<link rel="stylesheet" type="text/css" href="estiloscalculadora.css">
+	<link rel="stylesheet" type="text/css" href="css/estiloscalculadora.css">
+	<script src="js/calculadora.js"></script>
 </head>
 <body>
 	<h1>Calculadora Básica</h1>
@@ -26,28 +27,28 @@
 			</tr>
 
 			<tr>
-				<td><input type="button" value="7"></td>
-				<td><input type="button" value="8"></td>
-				<td><input type="button" value="9"></td>
-				<td><input type="button" value="*"></td>
+				<td><input type="button" value="7" onclick="numeros('7');"></td>
+				<td><input type="button" value="8" onclick="numeros('8');"></td>
+				<td><input type="button" value="9" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="*" onclick="operadores(this.value);"></td>
 			</tr>
 			<tr>
-				<td><input type="button" value="4"></td>
-				<td><input type="button" value="5"></td>
-				<td><input type="button" value="6"></td>
-				<td><input type="button" value="-"></td>
+				<td><input type="button" value="4" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="5" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="6" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="-" onclick="operadores(this.value);"></td>
 			</tr>
 			<tr>
-				<td><input type="button" value="1"></td>
-				<td><input type="button" value="2"></td>
-				<td><input type="button" value="3"></td>
-				<td><input type="button" value="+"></td>
+				<td><input type="button" value="1" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="2" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="3" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="+" onclick="operadores(this.value);"></td>
 			</tr>
 			<tr>
-				<td><input type="button" value="CE"></td>
-				<td><input type="button" value="0"></td>
-				<td><input type="button" value="="></td>
-				<td><input type="button" value="/"></td>
+				<td><input type="button" value="CE" onclick="limpiar();"></td>
+				<td><input type="button" value="0" onclick="numeros(this.value);"></td>
+				<td><input type="button" value="=" onclick="igual();"></td>
+				<td><input type="button" value="/" onclick="operadores(this.value);"></td>
 			</tr>
 
 		</table>
