--- a/jquery.html
+++ b/jquery.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Uso JQuery</title>
-	<script type="js/jquery.js"></script>
+	<!-- Utilizando el CDN de JQuery -->
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="js/eventos.js"></script>
 </head>
 <body>
+    <img src="" id="imgFoto">
+    <input type="text" id="txtNombre">
 	<button id="dameClic">Botón de clic</button>
 </body>
 </html>
