--- a/jquery.html
+++ b/jquery.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>Uso JQuery</title>
+	<link rel="stylesheet" href="css/Mijquery.css">
 	<!-- Utilizando el CDN de JQuery -->
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="js/eventos.js"></script>
 </head>
 <body>
-    <img src="" id="imgFoto">
+    <img src="" id="imgFoto"> <br>
     <input type="text" id="txtNombre">
+    <article id="miArticle"></article>
 	<button id="dameClic">Botón de clic</button>
 </body>
 </html>
