--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -4,11 +4,10 @@
 	<meta charset="utf-8">
 	<title>Sistema de prueba</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script
- 	src="http://code.jquery.com/jquery-3.1.1.min.js"
-  	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  	crossorigin="anonymous"></script>
-  	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" href="css/estilos.css">
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	
+  	<script src="js/eventos.js"></script>
 </head>
 <body>
 	<header>
