--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Sistema de prueba</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	
   	<script src="js/eventos.js"></script>
@@ -28,7 +28,7 @@
 				</button> 
 				</li>
 				<li>
-				<button class="btn btn-danger">
+				<button class="btn btn-danger" id="btnAlta">
 					<span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
 					Baja
 				</button> 
@@ -48,6 +48,7 @@
 			</ul>
 		</nav>
 	</header>
+
 	<section id="entradaUsuario">
 		<article>
 			<div class="panel panel-primary">
@@ -58,10 +59,25 @@
     		<input type="text" id="txtUsuario" class="form-control" placeholder="Nombre de usuario" autofocus>
     		<input type="password" id="txtClave" class="form-control" placeholder="Contraseña">
     		<button id="btnValidaUsuario" class="btn btn-primary">Entrar</button>
-  </div>
-</div>
+ 			 	</div>
+			</div>
 		</article>
 	</section>
+	<main>
+		<article id="artAltaUsuarios">
+			<h2>Alta de Usuarios</h2>
+			<input type="text" id="txtUsuario" placeholder="Usuario" class="form-control">
+			<input type="text" id="txtNombre" placeholder="Nombre" class="form-control">
+			<input type="password" id="txtClave" placeholder="Clave" class="form-control">
 
+			<select name="txtTipo" id="txtTipo" placeholder="Tipo" class="form-control">
+				<option value="ninguno">Seleccione una opción</option>
+				<option value="administrador">Administrador</option>
+				<option value="invitado">Invitado</option>
+				<option value="colado">Colado</option>
+			</select>
+			<button class="btn btn-success btn-lg btn-block" id="btnGuardaUsuario">Guardar</button>
+		</article>
+	</main>
 </body>
 </html>
