--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -22,7 +22,7 @@
 				</button> 
 				</li>
 				<li>
-				<button class="btn btn-primary">
+				<button class="btn btn-primary" id="btnAlta">
 					<span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>
 					Alta
 				</button> 
